# Capminer

./: .bumpversion.cfg  .clang-tidy  .travis.yml  CMakeLists.txt  CODEOWNERS  README.md  appveyor.yml  circle.yml
CapMiner/: CMakeLists.txt  CapMiner.rc  main.cpp
cmake/Hunter/: config.cmake
docs/: API_DOCUMENTATION.md  BUILD.md  POOL_EXAMPLES_ETH.md
kawpowminer/: main.cpp
libapicore/: ApiServer.cpp  CMakeLists.txt
libdevcore/: Common.h  CommonData.cpp  CommonData.h  Exceptions.h  FixedHash.cpp  FixedHash.h  Guards.h  Log.cpp  Log.h  Worker.cpp  Worker.h
libethash-cl/kernels/: README.md
libethash-cpu/: CPUMiner.cpp  CPUMiner.h
libethash-cuda/: CUDAMiner.cpp  CUDAMiner.h
libethcore/: CMakeLists.txt  EthashAux.cpp  EthashAux.h  Farm.cpp  Farm.h  Miner.cpp  Miner.h  gnuplot-iostream.h
libhwmon/: wrapnvml.cpp
libpoolprotocols/: CMakeLists.txt  PoolURI.cpp  PoolURI.h
libpoolprotocols/stratum/: EthStratumClient.cpp
ps/: msiProfile.ps1  msiProfile1.bat  msiProfile1.ps1  msiProfile2.bat  msiProfile2.ps1  msiProfile3.bat  msiProfile3.ps1  msiProfile4.bat  msiProfile4.ps1  msiProfile5.bat  msiProfile5.ps1  pl100.bat  pl100.ps1  pl50.bat  pl50.ps1  pl60.bat  pl60.ps1  pl70.bat  pl70.ps1  pl80.bat  pl80.ps1  pl90.bat  pl90.ps1
scripts/: testpools.bash
